--- a/OpenGym/package.json
+++ b/OpenGym/package.json
@@ -46,6 +46,9 @@
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4"
   },
+  "resolutions": {
+    "nth-check": "^2.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
